feat: Ajustes em lógica de acordo com ambiente + Dockerfile

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ DB_PASS=t3mp14t3
 DB_HOST=127.0.0.1
 DB_PORT=3306
 SECRET_KEY=za00ln7$uj8#r&n3wx^*$x_a0n34kpm*muaizy(ly+#3ovo98q
+ENV=DEV #DEV, HOM, PRD
